--- a/x11-wm/Makefile
+++ b/x11-wm/Makefile
@@ -124,6 +124,7 @@
     SUBDIR += vtwm
     SUBDIR += w9wm
     SUBDIR += weewm
+    SUBDIR += weston
     SUBDIR += windowlab
     SUBDIR += windowmaker
     SUBDIR += wm2
