--- a/x11-toolkits/Makefile
+++ b/x11-toolkits/Makefile
@@ -43,6 +43,7 @@
     SUBDIR += gtk30
     SUBDIR += gtkada
     SUBDIR += gtkada3
+    SUBDIR += gtkd
     SUBDIR += gtkdatabox
     SUBDIR += gtkextra2
     SUBDIR += gtkglarea2
