devel/ccls, devel/llvm60, devel/llvm70: disable assertions

--- a/devel/llvm70/Makefile
+++ b/devel/llvm70/Makefile
@@ -35,6 +35,9 @@ SHEBANG_FILES=	utils/lit/lit.py utils/llvm-lit/llvm-lit.in \
 SUB_FILES=	llvm-wrapper.sh
 SUB_LIST=	LLVM_PREFIX="${LLVM_PREFIX}" LLVM_SUFFIX="${LLVM_SUFFIX}"
 
+CFLAGS+=	-DNDEBUG
+CXXFLAGS+=	-DNDEBUG
+
 CMAKE_INSTALL_PREFIX=	${LLVM_PREFIX}
 CMAKE_ARGS=	-DLLVM_BUILD_LLVM_DYLIB=ON -DLLVM_LINK_LLVM_DYLIB=ON
 CMAKE_ARGS+=	-DLLVM_ENABLE_RTTI=ON
