--- a/devel/ccls/Makefile
+++ b/devel/ccls/Makefile
@@ -20,8 +20,10 @@ GH_ACCOUNT=	MaskRay
 # Commit matching 0.20181225.2:
 #GH_TAGNAME=	6ed201c42e10513b273f0c8a387035e119213298
 
+CFLAGS+=	-DNDEBUG
+CXXFLAGS+=	-DNDEBUG
 CMAKE_ARGS=	-DCLANG_ROOT:String="${LOCALBASE}/llvm${LLVM_DEFAULT}"
-CMAKE_ON=	SYSTEM_CLANG USE_SHARED_LLVM
+CMAKE_ON=	SYSTEM_CLANG USE_SHARED_LLVM LLVM_ENABLE_RTTI
 
 PLIST_FILES=	bin/ccls
 
