--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1801,6 +1801,7 @@
     SUBDIR += mspdebug
     SUBDIR += msrc0
     SUBDIR += mtbl
+    SUBDIR += mull
     SUBDIR += myrepos
     SUBDIR += nana
     SUBDIR += nant
