--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1551,6 +1551,7 @@
     SUBDIR += mspdebug
     SUBDIR += mstch
     SUBDIR += mtbl
+    SUBDIR += mull
     SUBDIR += mustache
     SUBDIR += mutagen
     SUBDIR += myrepos
