--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1466,6 +1466,7 @@
     SUBDIR += libgta
     SUBDIR += libgtop
     SUBDIR += libgudev
+    SUBDIR += libgusb
     SUBDIR += libgutenfetch
     SUBDIR += libhash
     SUBDIR += libhid
