--- a/emulators/Makefile
+++ b/emulators/Makefile
@@ -178,6 +178,7 @@
     SUBDIR += xzx
     SUBDIR += yabause
     SUBDIR += yape
+    SUBDIR += yuzu
     SUBDIR += zsnes
 
 .include <bsd.port.subdir.mk>
