--- a/math/Makefile
+++ b/math/Makefile
@@ -381,6 +381,7 @@
     SUBDIR += mumps-mpich
     SUBDIR += muparser
     SUBDIR += nanoflann
+    SUBDIR += nasc
     SUBDIR += naturalmath
     SUBDIR += nauty
     SUBDIR += ndiff
