graphics/simple-scan [dep: libgusb]

--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -990,6 +990,7 @@
     SUBDIR += showimage
     SUBDIR += silgraphite
     SUBDIR += simage
+    SUBDIR += simple-scan
     SUBDIR += simpleviewer
     SUBDIR += sk1
     SUBDIR += sk1libs
