--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -998,6 +998,7 @@
     SUBDIR += showimage
     SUBDIR += silgraphite
     SUBDIR += simage
+    SUBDIR += simple-scan
     SUBDIR += simpleviewer
     SUBDIR += sk1
     SUBDIR += sk1libs
