audio/clementine-player: qt5

--- a/audio/clementine-player/Makefile
+++ b/audio/clementine-player/Makefile
@@ -2,30 +2,27 @@
 # $FreeBSD$
 
 PORTNAME=	clementine
-DISTVERSIONPREFIX=	v
-DISTVERSION=		1.3.1-441
-DISTVERSIONSUFFIX=	-gc01b7bc
-PORTREVISION=	7
+PORTVERSION=	g20181205
 CATEGORIES=	audio
 PKGNAMESUFFIX=	-player
 
+PATCH_SITES=	https://github.com/jonaski/${GH_PROJECT}/commit/
+PATCHFILES=	6f189d95.patch:-p1
+
 MAINTAINER=	sbruno@FreeBSD.org
-COMMENT=	Cross-platform music player based on Amarok 1.4
+COMMENT=	Modern music player and library organizer
 
 LICENSE=	GPLv3+
 LICENSE_FILE=	${WRKSRC}/COPYING
-
-DEPRECATED=		Qt4 has been EOL since december 2015
-EXPIRATION_DATE=	2019-03-15
 
 BUILD_DEPENDS=	${LOCALBASE}/include/boost/shared_ptr.hpp:devel/boost-libs
 LIB_DEPENDS=	libtag.so:audio/taglib \
 		libchromaprint.so:audio/chromaprint \
 		libprotobuf.so:devel/protobuf \
-		libqca.so:devel/qca@qt4 \
-		libqjson.so:devel/qjson@qt4 \
+		libqca-qt5.so:devel/qca@qt5 \
+		libqjson-qt5.so:devel/qjson@qt5 \
 		libfftw3.so:math/fftw3 \
-		libechonest.so:audio/libechonest \
+		libechonest5.so:audio/libechonest \
 		libcryptopp.so:security/cryptopp
 
 BROKEN_powerpc64=	fails to compile: tagreader.cpp: undefined reference to TagLib::String::String
@@ -33,33 +30,32 @@ BROKEN_powerpc64=	fails to compile: tagreader.cpp: undefined reference to TagLib
 USE_GITHUB=	yes
 GH_ACCOUNT=	${PORTNAME}${PKGNAMESUFFIX}
 GH_PROJECT=	Clementine
+GH_TAGNAME=	453270c8b5015f39a44fd34c659e811c6b8048cf # qt5 branch
 
 USES=		cmake \
+		qt:5 \
+		gl \
 		compiler:c++11-lib \
 		desktop-file-utils \
 		gettext-tools \
 		pkgconfig \
-		qt:4 sqlite
-USE_CXXSTD=	c++11
+		sqlite
 
-USE_GL=		gl glew glu
-USE_XORG=	x11
+USE_GL=		gl glu glew
 
-CONFLICTS_BUILD=	qt-3.*
-USE_QT=		corelib \
+USE_QT=	core \
+		concurrent \
 		dbus \
 		gui \
 		imageformats \
 		qmake_build \
 		linguist_build \
-		moc_build \
 		network \
 		opengl \
-		qtestlib \
-		rcc_build \
+		testlib \
 		sql \
-		uic_build \
-		webkit \
+		widgets \
+		x11extras \
 		xml
 
 USE_GSTREAMER1=	cdparanoia \
@@ -70,6 +66,7 @@ USE_GSTREAMER1=	cdparanoia \
 		lame \
 		mpg123 \
 		neon \
+		opus \
 		shout2 \
 		soup \
 		taglib \
@@ -84,7 +81,16 @@ CFLAGS+=	-Wno-inconsistent-missing-override \
 
 CMAKE_ARGS+=	-DCMAKE_LIBRARY_PATH:PATH="${LOCALBASE}/lib:${PREFIX}/lib" \
 		-DENABLE_DBUS=ON \
-		-DENABLE_SPOTIFY_BLOB=OFF
+		-DENABLE_SPOTIFY_BLOB=OFF \
+		-DCRYPTOPP_LIBS=${LOCALBASE}/lib/libcryptopp.so \
+		-DCRYPTOPP_INCLUDEDIR=${LOCALBASE}/include/cryptopp \
+		-DCRYPTOPP_LIBDIR=${LOCALBASE}/lib \
+		-DCRYPTOPP_LDFLAGS=-lcryptopp \
+		-DCRYPTOPP_LIBRARIES=cryptopp \
+		-DCRYPTOPP_LIBRARY_DIRS=${LOCALBASE}/lib \
+		-DCRYPTOPP_cryptopp_INCLUDEDIR=${LOCALBASE}/include/cryptopp \
+		-DCRYPTOPP_cryptopp_LIBDIR=${LOCALBASE}/lib \
+		-DCRYPTOPP_FOUND=1
 
 OPTIONS_DEFINE=		AMAZON \
 			AUDIOCD \
@@ -158,6 +164,7 @@ DROPBOX_BUILD_DEPENDS=	sparsehash>=2.0.2:devel/sparsehash
 DROPBOX_CMAKE_ON=	-DENABLE_DROPBOX=ON
 DROPBOX_CMAKE_OFF=	-DENABLE_DROPBOX=OFF
 
+GIO_USES=		gnome
 GIO_USE=		GNOME=glib20
 GIO_CMAKE_ON=		-DENABLE_GIO=ON
 GIO_CMAKE_OFF=		-DENABLE_GIO=OFF
@@ -173,7 +180,7 @@ GPOD_LIB_DEPENDS=	libgpod.so:audio/libgpod \
 GPOD_CMAKE_ON=		-DENABLE_LIBGPOD=ON
 GPOD_CMAKE_OFF=		-DENABLE_LIBGPOD=OFF
 
-LASTFM_LIB_DEPENDS=	liblastfm.so:audio/liblastfm
+LASTFM_LIB_DEPENDS=	liblastfm5.so:audio/liblastfm-qt5
 LASTFM_CMAKE_ON=	-DENABLE_LIBLASTFM=ON
 LASTFM_CMAKE_OFF=	-DENABLE_LIBLASTFM=OFF
 
