--- a/sysutils/libcpuid/Makefile
+++ b/sysutils/libcpuid/Makefile
@@ -2,8 +2,9 @@
 # $FreeBSD$
 
 PORTNAME=	libcpuid
-PORTVERSION=	0.4.0
 DISTVERSIONPREFIX=	v
+DISTVERSION=	0.4.0-79
+DISTVERSIONSUFFIX=	-g84423b6
 CATEGORIES=	sysutils
 
 MAINTAINER=	danfe@FreeBSD.org
