--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -327,6 +327,7 @@
     SUBDIR += gwenview
     SUBDIR += hdr_tools
     SUBDIR += heimer
+    SUBDIR += hdrmerge
     SUBDIR += hiptext
     SUBDIR += hobbes-icons-xpm
     SUBDIR += hppsmtools
