--- a/graphics/cairo/Makefile
+++ b/graphics/cairo/Makefile
@@ -2,11 +2,11 @@
 # $FreeBSD$
 
 PORTNAME=	cairo
-PORTVERSION=	1.15.12
+PORTVERSION=	1.16.0
 PORTEPOCH=	2
 CATEGORIES=	graphics
-#MASTER_SITES=	http://cairographics.org/releases/
-MASTER_SITES=	http://cairographics.org/snapshots/
+MASTER_SITES=	http://cairographics.org/releases/
+#MASTER_SITES=	http://cairographics.org/snapshots/
 
 MAINTAINER=	gnome@FreeBSD.org
 COMMENT=	Vector graphics library with cross-device output support
@@ -64,7 +64,7 @@ MIPS_BUILD_DEPENDS=	${LOCALBASE}/include/atomic_ops.h:devel/libatomic_ops
 MIPS_USES=	localbase
 MIPS_CONFIGURE_ENV=	cairo_cv_atomic_primitives="libatomic-ops"
 
-PLIST_SUB+=	LIBVER=2.11512.0
+PLIST_SUB+=	LIBVER=2.11600.0
 
 post-patch:
 	@${REINPLACE_CMD} -e '/strings/s/ - / -a /' \
