add vala to gnome-usage

--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -438,6 +438,7 @@
     SUBDIR += gnome-power-manager
     SUBDIR += gnome-settings-daemon
     SUBDIR += gnome-system-monitor
+    SUBDIR += gnome-usage
     SUBDIR += gnome_subr
     SUBDIR += go-wtf
     SUBDIR += goaccess
