--- a/mail/geary/Makefile
+++ b/mail/geary/Makefile
@@ -2,8 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	geary
-PORTVERSION=	0.13.3
-PORTREVISION=	1
+PORTVERSION=	3.36.1
 CATEGORIES=	mail gnome
 MASTER_SITES=	GNOME
 DIST_SUBDIR=	gnome
@@ -15,18 +14,22 @@ LICENSE=	BSD2CLAUSE CC-BY-3.0 LGPL21+
 LICENSE_COMB=	multi
 
 BUILD_DEPENDS=	vapigen:lang/vala \
+		appstream-util:devel/appstream-glib \
 		itstool:textproc/itstool
-LIB_DEPENDS=	libgmime-2.6.so:mail/gmime26 \
+LIB_DEPENDS=	libgmime-3.0.so:mail/gmime30 \
 		libsoup-2.4.so:devel/libsoup \
 		libunwind.so:devel/libunwind \
 		libjson-glib-1.0.so:devel/json-glib \
 		libwebkit2gtk-4.0.so:www/webkit2-gtk3 \
 		libgoa-1.0.so:net/gnome-online-accounts \
-		libcanberra.so:audio/libcanberra \
-		libnotify.so:devel/libnotify \
+		libytnef.so:converters/ytnef \
 		libgee-0.8.so:devel/libgee \
 		libgcr-3.so:security/gcr \
 		libsecret-1.so:security/libsecret \
+		libfolks.so:net-im/folks \
+		libpeas-1.0.so:devel/libpeas \
+		libhandy-0.0.so:x11-toolkits/libhandy \
+		libgspell-1.so:textproc/gspell \
 		libenchant-2.so:textproc/enchant2
 
 USES=		compiler:c11 desktop-file-utils gettext gmake gnome meson \
