--- a/x11/gdm/files/patch-data_gdm.schemas.in
+++ b/x11/gdm/files/patch-data_gdm.schemas.in
@@ -1,5 +1,5 @@
---- data/gdm.schemas.in.in.orig	2009-05-16 18:17:53.000000000 -0400
-+++ data/gdm.schemas.in.in	2009-05-16 18:18:01.000000000 -0400
+--- data/gdm.schemas.in.orig	2009-05-16 18:17:53.000000000 -0400
++++ data/gdm.schemas.in	2009-05-16 18:18:01.000000000 -0400
 @@ -77,7 +77,7 @@
      <schema>
        <key>xdmcp/DisplaysPerHost</key>
