Add missing gir-to-d

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -781,6 +781,7 @@
     SUBDIR += ghub
     SUBDIR += gindent
     SUBDIR += gio-sharp
+    SUBDIR += gir-to-d
     SUBDIR += git
     SUBDIR += git-absorb
     SUBDIR += git-bug
