Fix non-aarch64 build

--- a/devel/llvm80/Makefile
+++ b/devel/llvm80/Makefile
@@ -84,7 +84,9 @@ CLANG_CMAKE_ON=		-DCLANG_DEFAULT_OPENMP_RUNTIME=libomp \
 CLANG_PORTDOCS=		clang
 CLANG_USE=		GNOME=libxml2
 COMPILER_RT_DESC=	Sanitizer libraries
-COMPILER_RT_EXTRA_PATCHES=	${PATCHDIR}/compiler-rt
+.if ${ARCH} == "aarch64"
+COMPILER_RT_EXTRA_PATCHES=${PATCHDIR}/compiler-rt
+.endif
 COMPILER_RT_DISTFILES=	compiler-rt-${DISTVERSION}.src${EXTRACT_SUFX}
 COMPILER_RT_PLIST_FILES=${_COMPILER_RT_LIBS:S|^|${_CRTLIBDIR}/|} \
 			${_COMPILER_RT_BLACKLISTS:S|^|${_CRTBLDIR}/|}
