--- a/net/grilo-plugins/Makefile
+++ b/net/grilo-plugins/Makefile
@@ -25,11 +25,11 @@ LIB_DEPENDS=	libgrilo-0.3.so:net/grilo \
 		libgmime-2.6.so:mail/gmime26 \
 		libjson-glib-1.0.so:devel/json-glib
 
-USES=		gettext gperf gnome libarchive meson pathfix pkgconfig sqlite tar:xz
+USES=		gettext gperf gnome libarchive lua:53 meson pathfix pkgconfig sqlite tar:xz
 USE_LDCONFIG=	yes
 USE_GNOME=	glib20 intlhack libxml2
 USE_GSTREAMER1=	chromaprint
-MESON_ARGS=	-Denable-lua-factory=no
+MESON_ARGS=	-Denable-lua-factory=yes
 
 OPTIONS_SUB=			yes
 OPTIONS_DEFINE=			TRACKER DMAP
