--- a/emulators/qemu40/Makefile
+++ b/emulators/qemu40/Makefile
@@ -126,6 +126,15 @@ MAKE_ARGS+=	ARCH=ppc64
 CONFIGURE_ARGS+=	--sparc_cpu=v9
 .endif
 
+# modif perso
+CONFIGURE_ARGS+=	--enable-spice --enable-xen
+BUILD_DEPENDS+=		spice-protocol>=0.12.14:devel/spice-protocol
+LIB_DEPENDS+=		libxenstore.so.3.0:sysutils/xen-tools \
+			libspice-server.so:devel/libspice-server \
+			libvirglrenderer.so:graphics/virglrenderer
+# end modif perso
+
+
 PLIST_SUB+=	LINUXBOOT_DMA=""
 
 # -lprocstat actually only _needs_ -lelf after r249666 or r250870 (MFC)
