--- a/www/webkit2-gtk3/Makefile
+++ b/www/webkit2-gtk3/Makefile
@@ -53,9 +53,10 @@ CXXFLAGS_powerpc=	-DENABLE_YARR_JIT=0
 CXXFLAGS_powerpc64=	-DENABLE_YARR_JIT=0
 CMAKE_ARGS=		-DPORT=GTK
 CMAKE_OFF=		USE_LD_GOLD ${CMAKE_OFF_${ARCH}:U} \
-			ENABLE_GLES2 \
 			USE_SYSTEM_MALLOC
-CMAKE_ON=		ENABLE_MINIBROWSER
+# ENABLE_GLES2
+CMAKE_ON=		ENABLE_ACCELERATED_2D_CANVAS \
+			ENABLE_MINIBROWSER
 CMAKE_OFF_armv6=	ENABLE_JIT
 CMAKE_OFF_armv7=	ENABLE_JIT
 CMAKE_OFF_powerpc=	ENABLE_JIT
