--- a/www/midori/Makefile
+++ b/www/midori/Makefile
@@ -12,8 +12,7 @@ COMMENT=	Lightweight web browser using WebKit browser engine
 LICENSE=	LGPL21 MIT
 LICENSE_COMB=	multi
 
-BUILD_DEPENDS=	rsvg-convert:graphics/librsvg2 \
-		valac:lang/vala
+BUILD_DEPENDS=	valac:lang/vala
 LIB_DEPENDS=	libnotify.so:devel/libnotify \
 		libjson-glib-1.0.so:devel/json-glib \
 		libsoup-2.4.so:devel/libsoup \
@@ -26,7 +25,7 @@ RUN_DEPENDS=	${LOCALBASE}/share/certs/ca-root-nss.crt:security/ca_root_nss
 
 USES=		cmake compiler:c++11-lang desktop-file-utils gettext gnome \
 		libarchive localbase:ldflags pkgconfig sqlite tar:bzip2 xorg
-USE_GNOME=	cairo glib20 gtk30 intltool introspection libxml2
+USE_GNOME=	cairo glib20 gtk30 intltool introspection librsvg2 libxml2
 USE_XORG=	xscrnsaver
 
 CFLAGS+=	-Wno-return-type
