Set PULSEAUDIO and other defaults in a bunch of places

--- a/audio/openal-soft/Makefile
+++ b/audio/openal-soft/Makefile
@@ -28,7 +28,7 @@ LDFLAGS_i386=	-Wl,-z,notext
 PLIST_SUB=	SOVERSION=${PORTVERSION}
 
 OPTIONS_DEFINE=		CONFIG EXAMPLES JACK OSS PORTAUDIO PULSEAUDIO SDL SNDIO
-OPTIONS_DEFAULT=	OSS
+OPTIONS_DEFAULT=	PULSEAUDIO
 OPTIONS_SUB=		yes
 
 CONFIG_DESC=	Install configuration utility (needs Qt 5)
