--- a/emulators/rpcs3/Makefile
+++ b/emulators/rpcs3/Makefile
@@ -46,7 +46,7 @@ CMAKE_OFF=	USE_NATIVE_INSTRUCTIONS
 LDFLAGS+=	-Wl,--as-needed # GLU
 
 OPTIONS_DEFINE=	ALSA EVDEV FAUDIO PULSEAUDIO VULKAN
-OPTIONS_DEFAULT=EVDEV FAUDIO VULKAN
+OPTIONS_DEFAULT=EVDEV PULSEAUDIO VULKAN
 
 ALSA_LIB_DEPENDS=	libasound.so:audio/alsa-lib
 ALSA_RUN_DEPENDS=	${LOCALBASE}/lib/alsa-lib/libasound_module_pcm_oss.so:audio/alsa-plugins
