Update tilix to 1.9.5

--- a/x11/tilix/Makefile
+++ b/x11/tilix/Makefile
@@ -1,8 +1,8 @@
 # $FreeBSD$
 
 PORTNAME=	tilix
-DISTVERSION=	1.9.3-38
-DISTVERSIONSUFFIX=	-g3617018
+DISTVERSION=	1.9.5-38
+DISTVERSIONSUFFIX=	-gb6bcccf
 CATEGORIES=	x11
 
 MAINTAINER=	greg@unrelenting.technology
