--- a/x11-toolkits/Makefile
+++ b/x11-toolkits/Makefile
@@ -81,6 +81,8 @@
     SUBDIR += libbonoboui-reference
     SUBDIR += libdazzle
     SUBDIR += libgdiplus
+    SUBDIR += libgnomeprintui
+    SUBDIR += libgnomeprintuimm
     SUBDIR += libgnomeui
     SUBDIR += libgnomeui-reference
     SUBDIR += libgnomeuimm26
