--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -137,6 +137,7 @@
     SUBDIR += drawpile
     SUBDIR += drm-current-kmod
     SUBDIR += drm-devel-kmod
+    SUBDIR += drm-devel-fbsd12.1-kmod
     SUBDIR += drm-fbsd11.2-kmod
     SUBDIR += drm-fbsd12.0-kmod
     SUBDIR += drm-kmod
