--- a/net/avahi-app/files/patch-avahi-qt_Makefile.in
+++ b/net/avahi-app/files/patch-avahi-qt_Makefile.in
@@ -1,6 +1,6 @@
---- avahi-qt/Makefile.in.orig	2017-09-15 01:20:16 UTC
-+++ avahi-qt/Makefile.in
-@@ -117,7 +117,6 @@ am__installdirs = "$(DESTDIR)$(libdir)" 
+--- avahi-qt/Makefile.in.orig	2020-03-13 22:57:06.906214000 +0300
++++ avahi-qt/Makefile.in	2020-03-13 23:33:37.092419000 +0300
+@@ -182,7 +182,6 @@
  LTLIBRARIES = $(lib_LTLIBRARIES)
  am__DEPENDENCIES_1 =
  @HAVE_QT3_TRUE@libavahi_qt3_la_DEPENDENCIES =  \
@@ -8,7 +8,7 @@
  @HAVE_QT3_TRUE@	$(am__DEPENDENCIES_1)
  am__libavahi_qt3_la_SOURCES_DIST = qt-watch.cpp
  @HAVE_QT3_TRUE@am_libavahi_qt3_la_OBJECTS =  \
-@@ -132,7 +131,6 @@ libavahi_qt3_la_LINK = $(LIBTOOL) $(AM_V
+@@ -198,7 +197,6 @@
  	$(LDFLAGS) -o $@
  @HAVE_QT3_TRUE@am_libavahi_qt3_la_rpath = -rpath $(libdir)
  @HAVE_QT4_TRUE@libavahi_qt4_la_DEPENDENCIES =  \
@@ -16,7 +16,16 @@
  @HAVE_QT4_TRUE@	$(am__DEPENDENCIES_1)
  am__libavahi_qt4_la_SOURCES_DIST = qt-watch.cpp
  @HAVE_QT4_TRUE@am_libavahi_qt4_la_OBJECTS =  \
-@@ -433,7 +431,7 @@ BUILT_SOURCES = $(am__append_2) $(am__ap
+@@ -210,7 +208,7 @@
+ 	$(LDFLAGS) -o $@
+ @HAVE_QT4_TRUE@am_libavahi_qt4_la_rpath = -rpath $(libdir)
+ @HAVE_QT5_TRUE@libavahi_qt5_la_DEPENDENCIES =  \
+-@HAVE_QT5_TRUE@	../avahi-common/libavahi-common.la \
++@HAVE_QT5_TRUE@	-lavahi-common \
+ @HAVE_QT5_TRUE@	$(am__DEPENDENCIES_1)
+ am__libavahi_qt5_la_SOURCES_DIST = qt-watch.cpp
+ @HAVE_QT5_TRUE@am_libavahi_qt5_la_OBJECTS =  \
+@@ -552,7 +550,7 @@
  @HAVE_QT3_TRUE@	qt-watch.cpp
  
  @HAVE_QT3_TRUE@libavahi_qt3_la_CPPFLAGS = $(AM_CFLAGS) $(QT3_CFLAGS) $(VISIBILITY_HIDDEN_CFLAGS)
@@ -25,12 +34,21 @@
  @HAVE_QT3_TRUE@libavahi_qt3_la_LDFLAGS = $(AM_LDFLAGS) -export-dynamic -version-info $(LIBAVAHI_QT3_VERSION_INFO)
  @HAVE_QT4_TRUE@avahiqt4includedir = $(includedir)/avahi-qt4
  @HAVE_QT4_TRUE@avahiqt4include_HEADERS = \
-@@ -443,7 +441,7 @@ BUILT_SOURCES = $(am__append_2) $(am__ap
+@@ -562,7 +560,7 @@
  @HAVE_QT4_TRUE@	qt-watch.cpp
  
  @HAVE_QT4_TRUE@libavahi_qt4_la_CPPFLAGS = $(AM_CFLAGS) $(QT4_CFLAGS) -DQT4 $(VISIBILITY_HIDDEN_CFLAGS)
 -@HAVE_QT4_TRUE@libavahi_qt4_la_LIBADD = $(AM_LDADD) ../avahi-common/libavahi-common.la $(QT4_LIBS)
 +@HAVE_QT4_TRUE@libavahi_qt4_la_LIBADD = $(AM_LDADD) -lavahi-common $(QT4_LIBS)
  @HAVE_QT4_TRUE@libavahi_qt4_la_LDFLAGS = $(AM_LDFLAGS) -version-info $(LIBAVAHI_QT4_VERSION_INFO)
+ @HAVE_QT5_TRUE@avahiqt5includedir = $(includedir)/avahi-qt5
+ @HAVE_QT5_TRUE@avahiqt5include_HEADERS = \
+@@ -572,7 +570,7 @@
+ @HAVE_QT5_TRUE@	qt-watch.cpp
+ 
+ @HAVE_QT5_TRUE@libavahi_qt5_la_CPPFLAGS = $(AM_CFLAGS) --std=gnu++11 $(QT5_CFLAGS) -DQT5 $(VISIBILITY_HIDDEN_CFLAGS)
+-@HAVE_QT5_TRUE@libavahi_qt5_la_LIBADD = $(AM_LDADD) ../avahi-common/libavahi-common.la $(QT5_LIBS)
++@HAVE_QT5_TRUE@libavahi_qt5_la_LIBADD = $(AM_LDADD) -lavahi-common $(QT5_LIBS)
+ @HAVE_QT5_TRUE@libavahi_qt5_la_LDFLAGS = $(AM_LDFLAGS) -version-info $(LIBAVAHI_QT5_VERSION_INFO)
  CLEANFILES = $(BUILT_SOURCES)
  all: $(BUILT_SOURCES)
