--- a/net/py-avahi/Makefile
+++ b/net/py-avahi/Makefile
@@ -2,7 +2,6 @@
 # $FreeBSD$
 #   $MCom: ports/net/py-avahi/Makefile,v 1.4 2007/07/31 18:24:13 ahze Exp $
 
-PORTREVISION=	0
 CATEGORIES=	net gnome python
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 PKGNAMESUFFIX=	# empty
@@ -10,15 +9,12 @@ PKGNAMESUFFIX=	# empty
 MAINTAINER=	gnome@FreeBSD.org
 COMMENT=	Python interface to the Avahi mDNS system
 
-DEPRECATED=	Uses deprecated version of python
-EXPIRATION_DATE=	2020-09-15
-
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}gdbm>0:databases/py-gdbm@${PY_FLAVOR} \
 		${PYTHON_SITELIBDIR}/dbus/_dbus.py:devel/py-dbus@${PY_FLAVOR}
 LIB_DEPENDS=	libavahi-client.so:net/avahi-app
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}gdbm>0:databases/py-gdbm@${PY_FLAVOR} \
 		${PYTHON_SITELIBDIR}/dbus/_dbus.py:devel/py-dbus@${PY_FLAVOR} \
-		avahi-gtk>=0.7:net/avahi-gtk
+		avahi-gtk>=0.8:net/avahi-gtk
 
 MASTERDIR=	${.CURDIR}/../avahi-app
 BUILD_WRKSRC=	${WRKSRC}/avahi-python
@@ -28,10 +24,13 @@ PLIST=		${.CURDIR}/pkg-plist
 
 AVAHI_SLAVE=	python
 
-USE_GNOME=	pygobject3 pygtk2 gtk30
-USES=		python:2.7
+USE_GNOME=	pygobject3 gtk30
+USES=		python:3.6+
 USE_PYTHON=	flavors
-MANPAGES=	avahi-bookmarks.1 avahi-discover.1
+MANPAGES=	avahi-bookmarks.1
+
+post-extract:
+	@${CP} ${DISTDIR}/build-db ${WRKSRC}/service-type-database
 
 post-patch:
 	@${REINPLACE_CMD} -e 's|@pkglibdir@|${DATADIR}|' \
