audio/alsa-*: 1.2.2 https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=245321

--- a/audio/alsa-utils/Makefile
+++ b/audio/alsa-utils/Makefile
@@ -2,17 +2,19 @@
 # $FreeBSD$
 
 PORTNAME=	alsa-utils
-PORTVERSION=	1.1.2
+PORTVERSION=	1.2.2
 CATEGORIES=	audio
 MASTER_SITES=	ftp://ftp.alsa-project.org/pub/utils/ \
 		GENTOO
 
-MAINTAINER=	ports@FreeBSD.org
+MAINTAINER=	greg@unrelenting.technology
 COMMENT=	ALSA compatibility utils
 
 LICENSE=	GPLv2+
 
-LIB_DEPENDS=	libasound.so:audio/alsa-lib
+LIB_DEPENDS=	libasound.so:audio/alsa-lib \
+		libinotify.so:devel/libinotify \
+		libepoll-shim.so:devel/libepoll-shim
 RUN_DEPENDS=	${LOCALBASE}/lib/alsa-lib/libasound_module_pcm_oss.so:audio/alsa-plugins
 
 USES=		gmake localbase ncurses shebangfix tar:bzip2
@@ -21,13 +23,16 @@ CONFIGURE_ARGS=	--with-udev-rules-dir="\$${prefix}/lib/udev"
 SHEBANG_FILES=	alsa-info/alsa-info.sh alsaconf/alsaconf.in bat/alsabat-test.sh
 INSTALL_TARGET=	install-strip
 CPPFLAGS+=	-I${.CURDIR}/../alsa-lib/files
+CFLAGS+=	-I${LOCALBASE}/include/libepoll-shim -DSCHED_IDLE=SCHED_OTHER -Dlseek64=lseek
+LDFLAGS+=	-linotify -lepoll-shim
 
 OPTIONS_SUB=	yes
 OPTIONS_DEFINE=	BAT MANPAGES NLS SAMPLERATE
 OPTIONS_DEFAULT=BAT MANPAGES
 
 BAT_DESC=	Basic Audio Tester support
-BAT_LIB_DEPENDS=libfftw3.so:math/fftw3
+BAT_LIB_DEPENDS=libfftw3.so:math/fftw3 \
+		libfftw3f.so:math/fftw3-float
 BAT_CONFIGURE_ENABLE=bat
 
 MANPAGES_BUILD_DEPENDS=	minixmlto:textproc/minixmlto
