--- a/graphics/sane-backends/Makefile
+++ b/graphics/sane-backends/Makefile
@@ -36,7 +36,7 @@ GROUPS=		saned
 PLIST_SUB=	SOVERSION=${PORTVERSION}
 
 OPTIONS_DEFINE=		AVAHI DOCS GPHOTO IEEE1284 IPV6 NLS SNMP USB V4L
-OPTIONS_DEFAULT=	USB
+OPTIONS_DEFAULT=	AVAHI IPV6 USB
 OPTIONS_SUB=		yes
 
 IEEE1284_DESC=	Parallel port support via libieee1284
