--- a/x11-toolkits/tepl/Makefile
+++ b/x11-toolkits/tepl/Makefile
@@ -1,8 +1,7 @@
 # $FreeBSD$
 
 PORTNAME=	tepl
-PORTVERSION=	4.0.0
-PORTREVISION=	1
+PORTVERSION=	4.4.0
 CATEGORIES=	x11-toolkits
 MASTER_SITES=	GNOME
 DIST_SUBDIR=	gnome
@@ -13,7 +12,8 @@ COMMENT=	Text editor product line
 LICENSE=	LGPL21
 LICENSE_FILE=	${WRKSRC}/COPYING
 
-LIB_DEPENDS=	libuchardet.so:textproc/uchardet
+LIB_DEPENDS=	libuchardet.so:textproc/uchardet \
+		libamtk-5.so:x11-toolkits/amtk
 
 USES=		compiler:c11 gettext gmake gnome libtool pkgconfig tar:xz
 USE_GNOME=	cairo gdkpixbuf2 gtksourceview4 libxml2
