graphics/colord: enable gusb

--- a/graphics/colord/Makefile
+++ b/graphics/colord/Makefile
@@ -13,6 +13,7 @@ LICENSE=	GPLv2
 
 LIB_DEPENDS=	libpolkit-gobject-1.so:sysutils/polkit \
 		libdbus-1.so:devel/dbus \
+		libgusb.so:devel/libgusb \
 		liblcms2.so:graphics/lcms2
 
 USERS=		colord
@@ -28,7 +29,7 @@ CONFIGURE_ARGS=	--disable-udev \
 		--localstatedir=/var \
 		--enable-gtk-doc-html=no \
 		--disable-bash-completion \
-		--disable-gusb \
+		--enable-gusb \
 		--disable-sane \
 		--with-daemon-user=colord \
 		--disable-systemd-login \
