--- a/accessibility/at-spi2-core/Makefile
+++ b/accessibility/at-spi2-core/Makefile
@@ -17,10 +17,16 @@ LIB_DEPENDS=	libdbus-1.so:devel/dbus \
 
 PORTSCOUT=	limitw:1,even
 
-USES=		gettext gnome localbase meson pkgconfig tar:xz xorg
+USES=		gettext gnome localbase meson pkgconfig tar:xz
 USE_GNOME=	glib20 introspection:build
-USE_XORG=	ice sm x11 xi xtst xext
 USE_LDCONFIG=	yes
+
+OPTIONS_DEFINE=		X11
+OPTIONS_DEFAULT=	X11
+
+X11_USES=	xorg
+X11_USE=	XORG=ice,sm,x11,xi,xtst,xext
+X11_MESON_YES=	enable-x11
 
 post-install:
 	${RM} -r ${STAGEDIR}${PREFIX}/lib/systemd
